--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,8 +1,6 @@
 left_links:
-  - name: Blog
-    link: /blog/
-  - name: About
-    link: /about/
+  - name: Program
+    link: /blog/   
   - name: Contact
     link: /contact/
 right_links:
